# IPC_Serial

./: .gitignore  CMakeLists.txt  COBSTool.h  DataLinkLayer.cpp  DataLinkLayer.h  IPC_Serial.pro  README.md  SerialCom.cpp  TLVtools.cpp  TLVtools.h  TransportLayer.h  common.cpp  common.h  demo.cpp  taskManager.cpp
src/: COBSTool.cpp  COBSTool.h  DataLinkLayer.cpp  Msg2MCUhandler.cpp  Msg2MCUhandler.h  MsgQueue.cpp  MsgQueue.h  SerialCom.cpp  SerialCom.h  SerialServer.cpp  SerialServer.h  TLVtools.cpp  TLVtools.h  TransportLayer.cpp  common.cpp  common.h  demo.cpp  moc_SerialServer.cpp  serial.cpp  serial.h  taskManager.cpp  taskManager.h
